# QA_GURU_api_3

./: .env  .gitignore  pyproject.toml  requirements.txt
tests/: conftest.py  test_shop.py  tests_reqres_in.py
